Some improvements to memory manager
Tests/Legacy now runs, but has a problem with Chocolate memory blocks,
they're not initialised. Try re-building RO without that.

The clear_memory_region routine seems to be buggy; it doesn't work well
when clearing part of a section (modifying just the L2 translation table).

I've temporarily added more serial port access in case of failed data aborts
and all prefetch abort.

TaskOpSetController is just a thought, at the moment. Probably not a good
idea. I thought it might be useful in instant-action SWI code.

Speaking of those, new modules (that register SWI handler actions or queues)
can now use simple C functions.

--- a/Tests/Legacy/build
+++ b/Tests/Legacy/build
@@ -7,9 +7,11 @@ echo Modules: ${MODULES//:/ }
 
 # Be careful not to include the same module twice!
 # At least until it will be safely coped with.
-INITIAL_MODULES='QA7\0LEDBlink\0GPUMailbox\0BCM2835Display\0BCM2835GrV\0'
+INITIAL_MODULES='QA7\0'
 
 INITIAL_MODULES+='LogToUART\0'
+INITIAL_MODULES+='LEDBlink\0'
+INITIAL_MODULES+='GPUMailbox\0BCM2835Display\0BCM2835GrV\0'
 
 INITIAL_MODULES+='UtilityModule\0'
 INITIAL_MODULES+='FileSwitch\0ResourceFS\0'
