DisplayManager complains about the screen mode

--- a/Tests/Legacy/build
+++ b/Tests/Legacy/build
@@ -41,7 +41,7 @@ INITIAL_MODULES+='ColourTrans\0'
 ##INITIAL_MODULES+='DeviceFS\0'
 INITIAL_MODULES+='ScreenModes\0'
 #INITIAL_MODULES+='Portable\0'
-INITIAL_MODULES+='DisplayManager\0'
+# INITIAL_MODULES+='DisplayManager\0'
 INITIAL_MODULES+='DragASprite\0'
 INITIAL_MODULES+='DragAnObject\0'
 INITIAL_MODULES+='Draw\0'
